syntax = "proto3";

package uc.v1;

import "google/api/annotations.proto";

option go_package = "gokratos/api/uc/v1;v1";

service UserCenter {
  rpc Login(LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/api/uc/v1/login"
      body: "*"
    };
  }
}

message LoginRequest {
  string accountType = 1;
  string account = 2;
  string pwd = 3;
}

message LoginReply {
  string accessToken = 1;
  string refreshToken = 2;
  string tokenType = 3;
  int32 expires = 4;
  string scrope = 5;
  int64 uid = 6;
}